src/styles/globals.css
@tailwind base;

@layer base {

    main {
        @apply flex min-h-screen flex-col items-stretch justify-stretch content-stretch justify-items-stretch self-stretch;
    }

    main>div {
        @apply relative flex flex-col justify-stretch items-stretch flex-grow;
    }

    main.full>div {
        @apply max-w-none mx-0;
    }

    main h1 {
        @apply text-5xl font-display;
    }

    main h2 {
        @apply text-4xl font-display mt-4 mb-0 text-center;
    }

    main h3 {
        @apply text-2xl font-display mt-16 mb-0;
    }

    main p {
        @apply font-primary mt-2;
    }

    main ul {
        @apply block font-primary mt-5;
    }

    main li {
        @apply list-disc ml-4;
    }

    header h1,
    footer h1 {
        @apply text-9xl font-display;
    }
}

@tailwind components;
@tailwind utilities;

/*
:root {
    --foreground-rgb: 0, 0, 0;
    --background-rgb: 243, 235, 220;
}

@media (prefers-color-scheme: dark) {
    :root {
        --foreground-rgb: 255, 255, 255;
        --background-rgb: 51, 47, 34;
    }
} */
:root {
    --foreground-rgb: 0, 0, 0;
    --background-rgb: 243, 235, 220;
}

html {
    font-size: 14px;
}

@screen md {
    html {
        font-size: 16px;
    }
}

@screen lg {
    html {
        font-size: 18px;
    }
}

body {
    color: rgb(var(--foreground-rgb));
    background-color: rgb(var(--background-rgb));
    color: #222;
    font-family: sans-serif;
}

html,
body {
    overflow-x: hidden;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

main {
    position: relative;
}

main>*:first-child {
    @apply pt-16
}

main>*:last-child {
    @apply pb-16
}

main * {
    opacity: 0;
    animation: 0.5s ease-out 1s fade-in;
    animation-fill-mode: forwards;
}

.jungle main:before {
    content: '';
    position: absolute;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;

    /* background-image: url(../../public/jungle-l.png);
    background-position: center left;
    background-repeat: no-repeat;
    background-size: auto 100%; */

    background-color: #F9F4E9;
    background-image: url(../../public/jungle-l.png),
        url(../../public/jungle-r.png),
        linear-gradient(160deg, #091517 0%, #261d0d 100%);

    background-repeat: no-repeat, no-repeat;
    background-size: auto 100%, auto 100%, auto 0%;
    background-position: -10vmax center, 50vmax top, center bottom;
    transition: background-size 1s ease-in-out 0.25s, background-position 1s ease-in-out, background-color 1s ease-in-out;
    font-size: 17px;
}

.jungle.no-jungle main:before {
    background-color: #FFFFFF00;
    background-size: auto 100%, auto 100%, auto 0;
    background-position: -100vmax center, 100vmax top, center bottom;
}

.jungle.fade-jungle main:before {
    background-color: #F3EBDC;
    background-size: auto 100%, auto 100%, auto 0;
    background-position: -100vmax center, 100vmax top, center bottom;
}

.jungle.fade-jungle main *,
.jungle.no-jungle main * {
    opacity: 0;
    animation: 0.5s ease-out 0.5s fade-in;
    animation-fill-mode: forwards;
}

.jungle.half-jungle main:before {
    background-size: auto 100%, auto 100%, auto 30%;
}

.jungle.full-jungle main:before {
    background-size: auto 100%, auto 100%, auto 100%;
    background-attachment: fixed;
    min-height: 100vh;
}

.jungle.fixed-jungle main:before {
    position: fixed;
}

.dirt {
    background:
        url(../../public/bg.jpg) center left repeat;
    background-size: cover;
}

.map {
    background-image: url(../../public/map.png);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.x {
    background-image: url(../../public/x.png);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
}

.note {
    background-image: url(../../public/note.png);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    aspect-ratio: 4 / 3.5;
}

.fog {
    background-image: url(../../public/fog.png);
    background-position: center center;
    background-repeat: repeat;
}

.code-of-conduct h3::before {
    @apply content-['§'] font-normal pr-3;
}

.code-of-conduct p::first-letter {
    @apply text-xl tracking-wide;
}

.code-of-conduct a {
    @apply underline underline-offset-2;
}

.text-bold {
    letter-spacing: 1px;
    font-weight: normal;
    text-shadow: 1px 0 0 var(--tw-shadow-color);
}

.text-bolder {
    font-weight: normal;
    letter-spacing: 2px;
    text-shadow: 1px 0 0 var(--tw-shadow-color), 2px 0 0 var(--tw-shadow-color);
}

.text-boldest {
    font-weight: normal;
    letter-spacing: 3px;
    text-shadow: 1px 0 0 var(--tw-shadow-color), 2px 0 0 var(--tw-shadow-color), 3px 0 0 var(--tw-shadow-color);
}

@media (min-device-pixel-ratio: 1.5),
(min-resolution: 120dpi) {
    .text-bold {
        letter-spacing: 1px;
        font-weight: normal;
        text-shadow: .5px 0 0 var(--tw-shadow-color), 1px 0 0 var(--tw-shadow-color);
    }

    .text-bolder {
        font-weight: normal;
        letter-spacing: 2px;
        text-shadow: .666px 0 0 var(--tw-shadow-color), 1.333px 0 0 var(--tw-shadow-color), 2px 0 0 var(--tw-shadow-color);
    }

    .text-boldest {
        font-weight: normal;
        letter-spacing: 3px;
        text-shadow: .666px 0 0 var(--tw-shadow-color), 1.333px 0 0 var(--tw-shadow-color),
            2px 0 0 var(--tw-shadow-color),
            2.5px 0 0 var(--tw-shadow-color), 3px 0 0 var(--tw-shadow-color);
    }
}

@media (min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
    .text-bold {
        letter-spacing: 1px;
        font-weight: normal;
        text-shadow: .5px 0 0 var(--tw-shadow-color), 1px 0 0 var(--tw-shadow-color);
    }

    .text-bolder {
        font-weight: normal;
        letter-spacing: 2px;
        text-shadow: .5px 0 0 var(--tw-shadow-color), 1px 0 0 var(--tw-shadow-color), 1.5px 0 0 var(--tw-shadow-color), 2px 0 0 var(--tw-shadow-color);
    }

    .text-boldest {
        font-weight: normal;
        letter-spacing: 3px;
        text-shadow: .5px 0 0 var(--tw-shadow-color), 1px 0 0 var(--tw-shadow-color),
            1.5px 0 0 var(--tw-shadow-color), 2px 0 0 var(--tw-shadow-color),
            2.5px 0 0 var(--tw-shadow-color), 3px 0 0 var(--tw-shadow-color);
    }
}

@media (min-device-pixel-ratio: 3),
(min-resolution: 288dpi) {
    .text-bold {
        letter-spacing: 1px;
        font-weight: normal;
        text-shadow: .333px 0 0 var(--tw-shadow-color), .666px 0 0 var(--tw-shadow-color), 1px solid var(--tw-shadow-color);
    }

    .text-bolder {
        font-weight: normal;
        letter-spacing: 2px;
        text-shadow: .333px 0 0 var(--tw-shadow-color), .666px 0 0 var(--tw-shadow-color), 1px solid var(--tw-shadow-color),
            1.333px 0 0 var(--tw-shadow-color), 1.666px 0 0 var(--tw-shadow-color), 2px solid var(--tw-shadow-color);
    }

    .text-boldest {
        font-weight: normal;
        letter-spacing: 3px;
        text-shadow: .333px 0 0 var(--tw-shadow-color), .666px 0 0 var(--tw-shadow-color), 1px solid var(--tw-shadow-color),
            1.333px 0 0 var(--tw-shadow-color), 1.666px 0 0 var(--tw-shadow-color), 2px solid var(--tw-shadow-color),
            2.333px 0 0 var(--tw-shadow-color), 2.666px 0 0 var(--tw-shadow-color), 3px solid var(--tw-shadow-color);
    }
}

